💄 Fix the alignment of the Wezuwiusz logo in the header on mobile

--- a/style.css
+++ b/style.css
@@ -330,6 +330,7 @@ button, .button {
 	.website-header img {
 		width: 50%;
 		margin-bottom: 1rem;
+		margin-right: 0rem;
 	}
 
 	header h1 {
